# trep_omni

./: CMakeLists.txt  README.md  package.xml
launch/: spherical_pend.launch  trep_omni_config.rviz
src/: spherical_pend_simulator.py
